--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
     "sequelize": "^5.9.4",
     "sequelize-fixtures": "^1.0.2",
     "graphql-sequelize": "^9.3.6",
-    "graphql-relay": "^0.6.0"
+    "graphql-relay": "^0.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "express-jwt": "^5.3.1",
+    "jwt-decode": "^2.2.0",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
