--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require('path');
 
 const cfg = {
-    'config': path.resolve('src/orm/config', 'database.js'),
+    'config': path.resolve('src/orm/config', 'database-config.js'),
     'models-path': path.resolve('src/orm/', 'models'),
     'seeders-path': path.resolve('src/orm/', 'seeders'),
     'migrations-path': path.resolve('src/orm/', 'migrations')
