--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "jsonwebtoken": "^8.5.1",
     "express-jwt": "^5.3.1",
     "jwt-decode": "^2.2.0",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "pm2": "^3.5.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
