--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend of Ekids in node js",
   "main": "src/server.js",
   "scripts": {
-    "build": "webpack --entry ./dist/index.js --output-filename bundle.min.js --output-path ./dist/ ",
+    "build": "webpack --entry ./src/index.js --output-filename bundle.min.js --output-path ./dist/ ",
     "prod": "pm2 start src/server.js",
     "start": "nodemon   src/server.js",
     "start2": "nodemon --exec babel-node src/server.js",
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/po-ci/ekids-nodejs#readme",
   "dependencies": {
     "apollo-boost": "^0.4.3",
-    "apollo-server-express": "^2.6.7",
+    "apollo-server": "^2.7.0",
+    "apollo-server-express": "^2.7.0",
     "merge-graphql-schemas": "^1.5.8",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
