Add smtpmail service

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,12 @@ DB_HOSTNAME=
 DB_DIALECT=
 JWT_SECRET=
 HOST=http://yourDomain:PORT
+
+APP_NAME=
+APP_URL=
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_SECURE=true
+SMTP_USER=ci.sys.virtual@gmail.com
+SMTP_PASS=W1nt3rf3ll
